# EDU_COIN1

./: Cargo.toml  README.md  dfx.json  package-lock.json
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.js  index.js
src/: lib.rs
src/edu_coin_backend/: main.mo
