[package]
name = "edu_coin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.0.0", features = ["legacy"] }
borsh = { version = "1.0", features = ["derive"] }

[dev-dependencies]
near-sdk = { version = "5.0.0", features = ["legacy", "unit-testing"] }
